welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:36: error: not found: value O
		diag = O;
                       ^